--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ plugins/classic-editor
 plugins/wp-lazy-loading
 
 # ignore specific themes
-wp-content/themes/twenty*/
+themes/twenty*/
 
 # ignore node dependency directories
 node_modules/
